--- a/index.css
+++ b/index.css
@@ -1,70 +1,334 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* General box sizing for all elements */
 * {
   box-sizing: border-box;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
-  
+
+/* Body styling */
 body {
   min-height: 100vh;
-  background: #FAF3E8;
+  background: #ffffff;
   background-size: cover;
   background-position: center;
 }
 
+/* Header styling (navigation bar) */
 header {
-    position: fixed;
-    top:3;
-    left:0;
-    width: 100%;
-    padding: 20px 100px;
-    background: #FAF3E8;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 100px;
+  background-image: linear-gradient(180deg, rgb(255, 153, 192), #fce5af);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.3s;
+  z-index: 100;
+}
 
-nav a{
-  font-family: "Poppins", sans-serif;
+/* Navigation links styling */
+nav a {
+  position: relative;
+  font-family: "Jost", sans-serif;
   font-weight: bold;
   display: inline-block;
-  color: #2121a1;
+  color: #0d0d2a;
   font-size: 20px;
-  font-style: bold;
   text-decoration: none;
 }
 
+/* Hover effect for navigation links */
+nav a::before {
+  content: ''; /* Pseudo element for underline effect */
+  position: absolute;
+  top: 100%; /* Positioned below the link */
+  left: 0;
+  width: 0; /* Initially no width */
+  height: 2px; /* Underline height */
+  background: #0d0d2a;
+  transition: 0.3s; /* Smooth transition */
+}
 
+/* Hover effect expansion */
+nav a:hover::before {
+  width: 100%; /* Full width on hover */
+}
+
+/* Logo styling in the navbar */
 #logo-navbar {
-    aspect-ratio:  10 / 3;
-    width: 10rem;
-    padding: 0;
-    margin:0;
-    height: 3rem;
+  aspect-ratio: 10 / 3;
+  width: 10rem;
+  height: 4rem;
+  padding: 0;
+  margin: 0;
+}
+
+/* Navigation list styling */
+nav > ul {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-inline-start: 0;
+  margin-block: 0;
+  height: 100%;
 }
 
 
-nav > ul {
-    display: flex;
-    justify-content:space-around;
-    list-style-type: none;
-    flex-wrap: wrap;
-    align-items: center;
-    padding-inline-start: 0;
-    margin-block: 0;
-    height: 100%;
-  }
 
-  nav > ul > li {
-    color: #dfdfe2;
-    margin: 0 0.4rem;
-    padding: 0.4rem;
-    display: block;
-  } 
+/* List item styling within the navigation */
+nav > ul > li {
+  color: #dfdfe2;
+  margin: 0 0.4rem;
+  padding: 0.4rem;
+  display: block;
+}
 
-  #meiya-cover {
+/* Background video styling */
+.background-video {
+  position: relative;
+  right: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  filter: brightness(100%);
+}
+
+/* Media query for background video */
+@media (min-aspect-ratio: 16/9) {
+  .background-video {
     width: 100%;
   }
+}
+
+/* Trailer container styling */
+.trailer {
+  position: relative;
+  width: 100%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+/* Description container styling */
+.container-desc {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  height: 94vh;
+  justify-content: center;
+  align-items: center;
+  margin: 3em 18em;
+  bottom: 0;
+  justify-content: space-between;
+}
+
+/* Clear element for spacing */
+.clear {
+  height: 50px;
+}
+
+/* Intro message styling */
+.intro-msg {
+  font-family: "Jost", sans-serif;
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 1.5rem;
+  background-color: rgb(255, 255, 255);
+  color: rgb(28, 18, 74);
+}
+
+/* Custom scrollbar styling */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(255, 153, 192);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: linear-gradient(rgb(255, 153, 192), rgb(255, 255, 255));
+}
+
+/* Main container styling */
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10vh 40vh 0 40vh;
+}
+
+/* Image styling within container */
+.container img {
+  position: relative;
+  background-color: black;
+  width: 37vh;
+  height: 11vh;
+  border-radius: 10px;
+}
+
+/* Button styling */
+button {
+  text-decoration: none;
+  border: none;
+  padding: none;
+  background-color: transparent;
+}
+
+/* General button styling */
+.button {
+  align-items: center;
+  background-color: #ffffff;
+  border: 2px solid #111;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #111;
+  cursor: pointer;
+  display: flex;
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  height: 48px;
+  justify-content: center;
+  line-height: 24px;
+  max-width: 100%;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin: 20px auto 0;
+}
+
+/* Button hover effect */
+.button:after {
+  background-color: #111;
+  border-radius: 8px;
+  content: "";
+  display: block;
+  height: 48px;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  transform: translate(8px, 8px);
+  transition: transform 0.2s ease-out;
+  z-index: -1;
+}
+
+/* Button hover effect transition */
+.button:hover:after {
+  transform: translate(0, 0);
+}
+
+/* Button active state styling */
+.button:active {
+  background-color: #f1f4fd;
+  outline: 0;
+}
+
+/* Button hover state styling */
+.button:hover {
+  outline: 0;
+}
+
+/* Button padding for larger screens */
+@media (min-width: 768px) {
+  .button {
+    padding: 0 40px;
+  }
+}
+
+/* Footer container styling */
+.container-footer {
+  display: flex;
+  flex-direction: row;
+  height: 20vh;
+  width: 120vh;
+  margin-top: 6vh;
+  justify-content: center;
+}
+
+/* Ustwo logo styling */
+.ustwo-logo {
+  height: 20vh;
+  width: 20vh;
+}
+
+/* Ustwo logo image styling */
+.ustwo-logo img {
+  min-height: 15vh;
+  max-height: 20vh;
+  opacity: 100%;
+}
+
+/* Ustwo logo image hover effect */
+.ustwo-logo img:hover {
+  opacity: 50%;
+}
+
+/* Line element styling */
+.line {
+  margin-top: 10vh;
+  height: 5px;
+  width: 80vh;
+  border-radius: 10px;
+  background: rgb(255, 255, 255);
+}
+
+/* Instagram logo styling */
+.ig-logo {
+  height: 20vh;
+  width: 15vh;
+}
+
+/* Instagram logo image styling */
+.ig-logo img {
+  min-height: 1vh;
+  max-height: 9vh;
+  opacity: 100%;
+  margin: 5vh 3vh;
+}
+
+/* Instagram logo image hover effect */
+.ig-logo img:hover {
+  opacity: 50%;
+}
+
+/* Twitter logo styling */
+.twitter {
+  height: 20vh;
+  width: 15vh;
+}
+
+/* Twitter logo image styling */
+.twitter img {
+  min-height: 1vh;
+  max-height: 9vh;
+  margin: 5vh 3vh;
+  opacity: 100%;
+}
+
+/* Twitter logo image hover effect */
+.twitter img:hover {
+  opacity: 50%;
+}
+
+/* Footer styling */
+footer {
+  position: relative;
+  display: flex;
+  background-color: #1a1a48;
+  height: 40vh;
+  justify-content: center;
+  align-items: center;
+}
